deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ims
  labels:
    app.kubernetes.io/name: ims
    app.kubernetes.io/part-of: integrated-management-system
